--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0"
+    "css-loader": "^3.5.3",
+    "gh-pages": "^2.2.0",
+    "style-loader": "^1.2.1"
   }
 }
